--- a/css/reset.css
+++ b/css/reset.css
@@ -6,3 +6,8 @@
   box-sizing: border-box;
   font-family: roboto condensed, sans-serif;
 }
+
+body {
+  height: 100vh;
+  overflow: hidden;
+}
